sumo/tests/netconvert/import/XML/errors/broken_edge/edge#function__empty4/errors.netconvert
Error: Empty edge function in edge '4'.
Quitting (on error).
